force-app/main/default/objects/AHA_EasyMilestones_Entry_Exit_Criteria__mdt/AHA_EasyMilestones_Entry_Exit_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>AHA Easy Milestones Entry Exit Criteria</label>
    <pluralLabel>AHA Easy Milestones Entry Exit Criteria</pluralLabel>
</CustomObject>