force-app/main/default/objects/AHA_EasyMilestones_Entry_Exit_Criteria__mdt/fields/Criteria_Context__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Context__c</fullName>
    <label>Criteria Context</label>
    <type>Text</type>
    <length>10</length>
</CustomField>