force-app/main/default/objects/AHA_EasyMilestones_Entry_Exit_Criteria__mdt/fields/Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>Criteria_JSON__c</fullName>
    <label>Criteria JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>